--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "useUnknownInCatchVariables": true,
+    "useUnknownInCatchVariables": false,
     "skipLibCheck": true
   },
   "exclude": ["node_modules"]
